[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/menu-switching.gd" type="Script" id=1]
[ext_resource path="res://playtime.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Node" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Button-Pause" type="Button" parent="CanvasLayer"]
anchor_left = 0.767
anchor_top = 0.126
anchor_right = 0.895
anchor_bottom = 0.241
margin_left = 0.208862
margin_top = 0.0778122
margin_right = 0.408813
margin_bottom = -1.4222
custom_fonts/font = SubResource( 1 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control-Menu" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control-About" type="Control" parent="CanvasLayer/Control-Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button-Close" type="Button" parent="CanvasLayer/Control-Menu/Control-About"]
anchor_left = 0.089
anchor_top = 0.123
anchor_right = 0.217
anchor_bottom = 0.237
margin_left = -0.241623
margin_top = -0.32061
margin_right = -0.041626
margin_bottom = 0.0793762
custom_fonts/font = SubResource( 1 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label-About" type="Label" parent="CanvasLayer/Control-Menu/Control-About"]
anchor_left = 0.5
anchor_top = 0.133
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -178.0
margin_top = 0.299995
margin_right = 179.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Design:
  Anna Romanko
Programming:
  Gleb Sviripa
  Alex Servirog
  Dmytro Zhukovetskyi
  Oleksandr Kryvonos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control-Main" type="Control" parent="CanvasLayer/Control-Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button-Start" type="Button" parent="CanvasLayer/Control-Menu/Control-Main"]
anchor_left = 0.454
anchor_top = 0.232
anchor_right = 0.582
anchor_bottom = 0.346
margin_left = -0.400024
margin_top = 1.41704
margin_right = -0.200012
margin_bottom = 0.817017
custom_fonts/font = SubResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button-About" type="Button" parent="CanvasLayer/Control-Menu/Control-Main"]
anchor_left = 0.457
anchor_top = 0.438
anchor_right = 0.585
anchor_bottom = 0.552
margin_left = -0.200012
margin_top = -1.41705
margin_right = -6.10352e-05
margin_bottom = -1.01709
custom_fonts/font = SubResource( 1 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Button-Pause" to="CanvasLayer" method="_on_ButtonPause_pressed"]
[connection signal="pressed" from="CanvasLayer/Control-Menu/Control-About/Button-Close" to="CanvasLayer" method="_on_ButtonClose_pressed"]
[connection signal="pressed" from="CanvasLayer/Control-Menu/Control-Main/Button-Start" to="CanvasLayer" method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="CanvasLayer/Control-Menu/Control-Main/Button-About" to="CanvasLayer" method="_on_ButtonAbout_pressed"]
